Local "not-found" image

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 <template id="kit-account-list-entry">
                     <li class="account">
                         <button disabled class="follow account">Follow</button>
-                        <img src="https://cdn.creazilla.com/cliparts/7794214/circle-slash-no-symbol-clipart-md.png" width=24 height=24 style="--width: 24; --height: 24">
+                        <img src="img/not-found.png" width=24 height=24 style="--width: 24; --height: 24">
                         <a href="/" target="_blank">Account display name</a>
                     </li>
                 </template>
