--- a/index.html
+++ b/index.html
@@ -485,11 +485,15 @@
         
                 <h2 id="qa">Q&A</h2>
 
-                    <p>TODO: Here explain:</p>
                     <ul>
-                        <li>Why starter kits ?
-                        <li>How starter kits can be submitted as PR on the GitHub
-                        <li>The starter kit json format
+                        <li>Why starter kits ? <a href="https://infosec.exchange/@thenexusofprivacy/113512328290399242" target="_blank">Some interesting to read discussions here</a>
+                        <li>How to create Starter-kits ? By <a href="https://github.com/villepreux/fedi-start/tree/main/starterkits" target="_blank">submiting them on GitHub</a>
+                        <li>Far better solutions : 
+                            <ul>
+                                <li><a href="https://mastodon.social/@dansup/113570817148026385" target="_blank">Dansup (PixelFed, Loop) project</a>
+                                <li><a href="https://fedidevs.com/starter-packs/" target="_blank">FediDevs project</a>
+                            </ul>
+                        </li>
                     </ul>
 
             </section>
